fixed alignment of logout items

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -17,9 +17,13 @@ ul.dropdown-content {
 
 .nav-item {
   display:flex;
+  justify-content:flex-start;
 }
-.navitem > *{
-  align-self: center;
+.nav-item .username {
+  display:flex;
+  align-items:center;
+
+
   padding-right:0.5em;
 }
 
@@ -28,8 +32,8 @@ ul.dropdown-content {
 
 /* The dropdown container */
 .dropdown {
-  float: left;
-  overflow: hidden;
+
+  overflow-y: hidden;
 }
 
 /* Dropdown button */
@@ -40,7 +44,7 @@ ul.dropdown-content {
   padding: 2px 2px;
   background-color: inherit;
   font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
+  margin: 1em 1em 1em 0em; /* Important for vertical align on mobile phones */
 }
 
 /* Add a red background color to navbar links on hover */
