--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -61,7 +61,7 @@ nav{
 	background-color: #444C5C;
 	width: 100vw;
 	height: 10vh;
-	padding: .5vw;
+	padding: 1vw;
 	font-family: 'Josefin Slab', serif;
 	font-weight: 500;
   font-size: 24px;
